force-app/main/default/objects/geopointe__Assignment__c/geopointe__Assignment__c.object-meta.xml
<CustomObject>
    <description>The is a legacy Geopointe object. It is no longer used and can be safely deleted.</description>
    <label>DELETE ME (Assignment)</label>
    <nameField>
        <label>Geopointe Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DELETE ME</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>