force-app/main/default/objects/geopointe__Assignment__c/fields/geopointe__Assignment_Plan__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Assignment_Plan__c</fullName>
    <label>Geopointe Assignment Plan</label>
    <referenceTo>geopointe__Assignment_Plan__c</referenceTo>
    <relationshipLabel>Geopointe Assignments</relationshipLabel>
    <relationshipName>Geopointe_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>