force-app/main/default/objects/geopointe__Assignment__c/fields/geopointe__Shape__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Shape__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Geopointe Shape</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>geopointe__Shape__c.geopointe__Usage_Type__c</field>
            <operation>equals</operation>
            <value>GeoShape</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>geopointe__Shape__c</referenceTo>
    <relationshipLabel>Deprecated</relationshipLabel>
    <relationshipName>Geopointe_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>